--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/pg": "^8.10.2",
     "nodemon": "^2.0.22",
     "prisma": "^4.16.2",
     "ts-node": "^10.9.1",
@@ -34,7 +33,6 @@
     "express-async-errors": "^3.1.1",
     "http-status": "^1.6.2",
     "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.0",
-    "pg": "^8.11.1"
+    "jsonwebtoken": "^9.0.0"
   }
 }
