--- a/package.json
+++ b/package.json
@@ -5,19 +5,28 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc && tsc-alias",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:prod": "prisma migrate deploy",
+    "seed": "prisma db seed",
+    "dev": "nodemon src/index.ts",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prisma":{
+    "seed": "ts-node prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "jest": "^29.6.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.16.2",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.6",
     "tsconfig-paths": "^4.2.0",
