--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "migrate:prod": "prisma migrate deploy",
     "seed": "prisma db seed",
     "dev": "nodemon src/index.ts",
-    "start": "node dist/index.js",
+    "start": "npm run migrate:prod && npm run seed && node dist/index.js",
     "test": "jest"
   },
   "keywords": [],
