--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "migrate:prod": "prisma migrate deploy",
     "seed": "prisma db seed",
     "dev": "nodemon src/index.ts",
-    "start": "npm run migrate:prod && npm run seed && node dist/index.js",
+    "start": "npm run build && npm run migrate:prod && npm run seed && node dist/index.js",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "prisma":{
+  "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
@@ -28,7 +28,7 @@
     "prisma": "^4.16.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "tsc-alias": "^1.8.6",
+    "tsc-alias": "^1.8.7",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   },
